# ved

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ved.man
src/: CMakeLists.txt  editor.cpp  editor.h  main.cpp  ops.cpp  ops.h
